k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-project
  labels:
    name: devops-project
    environment: production
