k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: devops-project
  labels:
    app: react-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
